@@ -1,60 +1,31 @@
 
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.7.22"
+    id "org.jetbrains.kotlin.jvm" version "1.8.22" apply false
+    id "org.graalvm.buildtools.native" version "0.9.22" apply false
 }
 
-ext {
-    hexagonVersion = "2.2.7"
-    hikariVersion = "5.0.1"
-    jettyVersion = "11.0.12"
-    postgresqlVersion = "42.5.0"
-    vertxVersion = "4.3.5"
-    cache2kVersion = "2.6.1.Final"
-    nettyVersion = "4.1.85.Final"
+version = "1.0.0"
+description = "TFB benchmark"
+group = "com.hexagonkt"
 
+ext {
+    hexagonVersion = "3.0.0-B3"
+    jettyVersion = "11.0.15"
+    nettyVersion = "4.1.93.Final"
+
+    hikariVersion = "5.0.1"
+    postgresqlVersion = "42.6.0"
+    vertxVersion = "4.4.3"
+    cache2kVersion = "2.6.1.Final"
+
+    applicationClass = "com.hexagonkt.BenchmarkKt"
+    modules = "java.naming,java.sql,java.management"
+    options = "--enable-preview"
     gradleScripts = "https://raw.githubusercontent.com/hexagonkt/hexagon/$hexagonVersion/gradle"
 }
 
-apply(from: "$gradleScripts/kotlin.gradle")
-apply(from: "$gradleScripts/application.gradle")
+subprojects {
+    version = rootProject.version
 
-apply(plugin: "war")
-
-defaultTasks("installDist")
-
-application {
-    mainClass.set("com.hexagonkt.BenchmarkKt")
+    apply(from: "$gradleScripts/kotlin.gradle")
 }
-
-war {
-    archiveFileName = "ROOT.war"
-}
-
-installDist.dependsOn("war")
-
-dependencies {
-    implementation("com.hexagonkt:http_server_netty_epoll:$hexagonVersion")
-    implementation("com.hexagonkt:http_server_jetty:$hexagonVersion")
-    implementation("com.hexagonkt:templates_pebble:$hexagonVersion")
-    implementation("com.hexagonkt:logging_slf4j_jul:$hexagonVersion")
-    implementation("com.hexagonkt:serialization_dsl_json:$hexagonVersion")
-
-    implementation("io.netty:netty-transport-native-epoll:$nettyVersion:linux-x86_64")
-    implementation("org.cache2k:cache2k-core:$cache2kVersion")
-    implementation("com.zaxxer:HikariCP:$hikariVersion")
-    implementation("org.postgresql:postgresql:$postgresqlVersion")
-    implementation("io.vertx:vertx-pg-client:$vertxVersion")
-
-    // providedCompile excludes the dependency only in the WAR, not in the distribution
-    providedCompile("org.eclipse.jetty:jetty-webapp:$jettyVersion") { exclude module: "slf4j-api" }
-}
-
-task("minimizeTemplate") {
-    doLast {
-        File template = file("$buildDir/resources/main/fortunes.pebble.html")
-        List<String> lines = template.readLines().collect { it.trim() }
-        template.write(lines.join(""))
-    }
-}
-
-assemble.dependsOn("minimizeTemplate")
